# opengl-display

./: .gitmodules  CMakeLists.txt  main.cpp
includes/animation/: animation.h  animator.h  animdata.h
includes/bone/: bone.h
includes/graphics/: graphics.cpp  graphics.h
includes/importer/: importer.cpp  importer.h
includes/mesh/: mesh.h
includes/model/: model.h
includes/shader/: shader.cpp  shader.h
models/: cross.mtl
shaders/: frag.glsl  vert.glsl
